<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#40E0D0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/buttonBack" />
    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings_title"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:src="@drawable/arrow_back"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/headerBackground"
        app:layout_constraintStart_toStartOf="@id/headerBackground"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/settings_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/headerBackground"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground"
        app:layout_constraintStart_toStartOf="@id/headerBackground"
        app:layout_constraintEnd_toEndOf="@id/headerBackground" />

    <TextView
        android:id="@+id/textViewVolumeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/settings_label_volume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBack" />

    <ImageView
        android:id="@+id/imageViewMute"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewVolumeLabel"
        app:srcCompat="@drawable/volume_off" />

    <SeekBar
        android:id="@+id/seekBarVolume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="@id/imageViewMute"
        app:layout_constraintEnd_toStartOf="@id/imageViewLoud"
        app:layout_constraintStart_toEndOf="@id/imageViewMute"
        app:layout_constraintTop_toTopOf="@id/imageViewMute" />

    <ImageView
        android:id="@+id/imageViewLoud"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/imageViewMute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageViewMute"
        app:srcCompat="@drawable/volume_up" />

    <TextView
        android:id="@+id/textViewVolumeProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBarVolume"
        tools:text="目前音量: 50 / 最大值: 100" />

    <TextView
        android:id="@+id/textViewVibrationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/settings_label_vibration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewVolumeProgress" />

    <Switch
        android:id="@+id/switchVibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewVibrationLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewLanguageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/settings_label_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewVibrationLabel" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewLanguageLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewBaseinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:minHeight="48dp"
        android:text="@string/settings_label_basic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLanguageLabel" />

    <TextView
        android:id="@+id/textViewChangepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/settings_label_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBaseinfo" />

    <TextView
        android:id="@+id/textViewHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/settings_label_hide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewChangepassword" />

    <Switch
        android:id="@+id/switchHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewHide"
        app:layout_constraintEnd_toEndOf="parent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewAppverison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/settings_label_app_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHide" />

    <TextView
        android:id="@+id/textViewUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_label_update_available"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewAppverison"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewOpinion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/settings_label_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAppverison" />

</androidx.constraintlayout.widget.ConstraintLayout>